--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -528,6 +528,7 @@
     <Compile Include="OIL\com\OIT0002CustomReportOLD.vb" />
     <Compile Include="OIL\com\OIT0003CustomMultiReport.vb" />
     <Compile Include="OIL\com\OIT0003CustomReportHassouExcel.vb" />
+    <Compile Include="OIL\com\OIT0006CustomReport.vb" />
     <Compile Include="OIL\com\OIT0008CustomReport .vb" />
     <Compile Include="OIL\com\OIT0003CustomReport.vb" />
     <Compile Include="OIL\com\OIT0003CustomReportReservedExcel.vb" />
